--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pusher/push-notifications-web": "^1.1.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "prisma": "^6.9.0",
